# openrouter-watch

./: .gitignore  AGENTS.md  NOTICE  README.md  pyproject.toml
.github/workflows/: data-refresh.yml  deploy-pages.yml  weighted-price-refresh.yml
data/derived/: models_20260418.csv  models_20260418.json  models_20260430_155816.csv  models_20260430_155816.json  models_20260501_133640.csv  models_20260501_133640.json  models_20260509_184234.csv  models_20260509_184234.json  models_20260512_145937.csv  models_20260512_145937.json  models_20260611_162421.csv  models_20260611_162421.json  models_20260611_204055.csv  models_20260611_204055.json  models_20260612_050847.csv  models_20260612_050847.json  models_20260612_104445.csv  models_20260612_104445.json  models_20260612_154628.csv  models_20260612_154628.json  models_20260612_185010.csv  models_20260612_185010.json  models_20260612_203302.csv  models_20260612_203302.json  models_20260613_045901.csv  models_20260613_045901.json  models_20260613_094117.csv  models_20260613_094117.json  models_20260613_143332.csv  models_20260613_143332.json  models_20260613_200128.csv  models_20260613_200128.json  models_20260614_051502.csv  models_20260614_051502.json  (+186 more)
docs/: architecture.md  data-schema.md  main_test_release_flow.md  readme.md
scripts/: derive.py  fetch.py  fetch_weighted_prices.py  normalize.py  track.sh
src/: openrouter_watch
tests/: test_deriver.py  test_fetcher.py  test_live_api.py  test_normalizer.py  test_scripts.py  test_weighted_prices.py
web/: astro.config.mjs  package-lock.json  package.json
(+30 files in other folders)
