[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-watch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "live: real OpenRouter HTTP; use with RUN_LIVE_API=1 (see tests/test_live_api.py)",
]
